# timetabler

./: COPYING  Makefile.am  Makefile.in  README  Timetabler.1  config.h.in  configure  configure.ac
Timetabler.xcodeproj/: project.pbxproj  r0ssar00.mode1v3  r0ssar00.pbxuser
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
frontends/include/: Frontend.h  TerminalFrontend.h  WxFrontend.cpp  WxFrontend.h
frontends/src/: Makefile.am  Makefile.in  TerminalFrontend.cpp
include/: Common.h  Date.h  Prefix.h
libdatastore/include/: DataStore.h  DebugDataStore.h  FileDataStore.h  InfoWebDataStore.h  RabaskaDataStore.h  SocketDataStore.h  StdioDataStore.h  XmlDataStore.h
libdatastore/src/: DebugDataStore.cpp  FileDataStore.cpp  InfoWebDataStore.cpp  Makefile.am  Makefile.in  RabaskaDataStore.cpp  SocketDataStore.cpp  StdioDataStore.cpp  XmlDataStore.cpp
libtimetable/include/: Class.h  Course.h  Timetable.h  TimetableConverter.h
libtimetable/src/: Class.cpp  Course.cpp  Makefile.am  Makefile.in  Timetable.cpp  TimetableConverter.cpp
src/: Makefile.am  Makefile.in  main.cpp
