noinst_LIBRARIES = libdatastore.a
noinst_HEADERS = ../include/DataStore.h ../include/DebugDataStore.h ../include/InfoWebDataStore.h ../include/RabaskaDataStore.h ../include/StdioDataStore.h ../include/FileDataStore.h
libdatastore_a_SOURCES=DebugDataStore.cpp InfoWebDataStore.cpp RabaskaDataStore.cpp StdioDataStore.cpp FileDataStore.cpp
libdatastore_a_CPPFLAGS=-I/usr/include/  
AM_CFLAGS=-I/usr/include/
